bot: Document VM options required to run